--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,18 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "d3-geo": "^2.0.2",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -28,8 +27,7 @@
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "redux": "^4.1.1",
-    "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-geo": "^1.12.3",
+    "@types/react-simple-maps": "^1.0.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^14.0.1"
   }
