--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -42,6 +42,7 @@
         ],
         "react/jsx-props-no-spreading": "off",
         "react/no-array-index-key": "off",
-        "no-nested-ternary": "off"
+        "no-nested-ternary": "off",
+        "object-curly-spacing": "off"
     }
 }
