--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16-alpine as build
 WORKDIR /app
 COPY package.json /app/package.json
-RUN npm install --only=prod
+RUN npm install
 COPY . /app
 RUN npm run build
 FROM nginx
