--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:16-alpine as build
+FROM node as build
 WORKDIR /app
-COPY package.json /app/package.json
-RUN npm install
-COPY . /app
+COPY package.json ./
+COPY package-lock.json ./
+RUN npm ci
+COPY . ./
 RUN npm run build
 FROM nginx
 COPY --from=build /app/build /usr/share/nginx/html
