--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,16 +36,16 @@
     ]
   },
   "devDependencies": {
-    "@types/d3-geo": "^1.12.3",
-    "@types/react-simple-maps": "^1.0.6",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-airbnb": "^18.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3-geo": "^1.12.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9"
+    "@types/react-dom": "^17.0.9",
+    "@types/react-simple-maps": "^1.0.6",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1"
   }
 }
