--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,6 +3,14 @@
         "browser": true,
         "es2021": true
     },
+    "overrides": [
+        {
+            "files": ["*.ts", "*.tsx"], // Your TypeScript files extension
+            "parserOptions": {
+                "project": ["./tsconfig.json"] // Specify it only for TypeScript files
+            }
+        }
+    ],
     "extends": [
         "react-app",
         "airbnb",
