--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,11 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-simple-maps": "^1.0.6",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1"
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "prettier": "2.4.1"
   }
 }
